--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -19,12 +19,12 @@ scrape_configs:
     static_configs:
       - targets:
         - 0.0.0.0:9090
-  - job_name: monitor_hardware 
+  - job_name: monitor_hardware # Change to whatever you like
     static_configs:
       - targets: ['172.25.0.4:9100']
-  - job_name: monitor_hardware_gitlab 
+  - job_name: monitor_hardware_gitlab # Change to whatever you like
     static_configs:
       - targets: ['192.168.1.32:9101']
-  - job_name: monitor_hardware_nginx
+  - job_name: monitor_hardware_nginx # Change to whatever you like
     static_configs:
       - targets: ['192.168.1.30:9101']
